Add jpms properties for jdk17.